some styling done

--- a/index.html
+++ b/index.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
    </head>
    <body>
       <header>
          <h1>Elsyph Doodles - A journey through art</h1>
-         <img src="images/heroimage.png" alt="Elsyph Doodles" width="550" height="550">
       </header>
       <main>
+         <article>
       <p>
          I started drawing when I was 6. I had colored in all of the pages of my coloring books and wanted to continue coloring, so I did my best to copy my favorite images of Mickey Mouse and other Disney characters. I remember my parents being really impressed and convinced I had traced over the images. I think this is what encouraged me to draw more and to try to start coming up with my own drawings in the years to follow.
          By the time I started high school drawing had really consumed a large chunk of my time. I doodled all over my class note books and if I was home, I was drawing. I would vary between drawing anime characters, portraits of my friend's MySpace profile pictures, and silly emo characterizations of my boyfriend and I, all under the name Jasmin Rawr. I fondly cringe at some of my older drawings.  
       </p>
-         <img src="images/section 1 A.jpg" alt=""> <img src="images/section 1 B.jpg" alt=""> <img src="images/section 1 C.jpg" alt="">
+         <img src="images/section 1 A.jpg" alt="" width="550" height="550"> 
+         <img src="images/section 1 B.jpg" alt="" width="550" height="550"> 
+         <img src="images/section 1 C.jpg" alt="" width="550" height="550">
       <p>
          After high school I went to college for Graphic Design. I started focusing more on clean line art and opting for color over black and white, sometimes using full ink rather than pencil.
       </p>
-         <img src="images/Section 2 A.jpg" alt=""> <img src="images/section 2 B.jpg" alt=""> <img src="images/section 2 C.jpg" alt="">
+         <img src="images/Section 2 A.jpg" alt="" width="550" height="550"> 
+         <img src="images/section 2 B.jpg" alt="" width="550" height="550"> 
+         <img src="images/section 2 C.jpg" alt="" width="550" height="550">
       <p>
          Eventually I bought my first drawing tablet and pushed into the world of digital art, donning the alias Cutea. I went back to my roots of Disney and other familiar characters while I adjusted to this strange new medium.
       </p>
-         <img src="images/section 3 A.jpg" alt=""> <img src="images/section 3 B.jpg" alt=""><img src="images/section 3 C.jpg" alt=""> <img src="images/Section 3 D.jpg" alt="">
+         <img src="images/section 3 A.jpg" alt="" width="800" height="550"> 
+         <img src="images/section 3 B.jpg" alt="" width="800" height="550">
+         <img src="images/section 3 C.jpg" alt="" width="550" height="550"> 
+         <img src="images/Section 3 D.jpg" alt="" width="800" height="550">
       <p>
          I finally found some confidence after months of practice. I dropped Cutea and became Elsyph, an alias I still sometimes use, and created my first digital OC, a drawn version of myself. I had the idea to insert myself as the main character of video games I completed.
       </p>
-         <img src="images/section 4 A.png" alt=""> <img src="images/section 4 B.JPG" alt=""> <img src="images/section 4 C.jpg" alt=""> <img src="images/section 4 D.png" alt="">
+         <img src="images/section 4 A.png" alt="" width="550" height="550"> 
+         <img src="images/section 4 D.png" alt="" width="550" height="550">
+         <img src="images/heroimage.png" alt="Elsyph Doodles" width="550" height="550">
       <p>
          As I grew my portfolio and found myself digging through various art forums and platforms I became interesting in honing my own artstyle, so I went back to drawing familiar characters and trying out different styles, desparetly searching for something that felt like me. Something that when you seen it, you could tell who drew it.
       </p>
-         <img src="images/section 5 A.png" alt=""><img src="images/section 5 B.png" alt=""> <img src="images/section 5 C.png" alt=""> <img src="images/section 5 D.png" alt="">
+         
+         <img src="images/section 5 B.png" alt="" width="550" height="800"> 
+         <img src="images/section 5 C.png" alt="" width="550" height="800"> 
+         <img src="images/section 5 D.png" alt="" width="550" height="800">
+         <img src="images/section 5 A.png" alt="" width="900" height="550">
       <p>
          Of course, I'm not a reknowned artist or anything so no one is going to recognize my art as mine, but I finally found a lot of my drawings started to look like they could have come from the same universe. I started drawing character portraits of Dungeons and Dragons characters for my friends and I still to do so to this day when someone comes to me with a fun character idea. I also continue to draw fanart as well when I'm feeling partiuclarly inspired.
       </p>
-         <img src="images/section 6 a.PNG" alt=""> <img src="images/section 6 B.png" alt=""> <img src="images/section 6 C.png" alt=""> <img src="images/section 6 D.png" alt=""> <img src="images/section 6 E.png" alt=""> <img src="images/section 6 F.png" alt="">
-   </main>
+         <img src="images/section 6 a.PNG" alt="" width="550" height="800"> 
+         <img src="images/section 6 B.png" alt="" width="550" height="800"> 
+         <img src="images/section 6 C.png" alt="" width="550" height="800"> 
+         <img src="images/section 6 D.png" alt="" width="700" height="700"> 
+         <img src="images/section 6 E.png" alt="" width="1000" height="700"> 
+         <img src="images/section 6 F.png" alt="" width="550" height="800">
+         </article>
+      </main>
 
       <footer>
          <p>
