--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </head>
    <body>
       <header>
-         <h1>Elsyph Doodles - A journey through art</h1>
+         <h1 id="mainHeading">Elsyph Doodles - A journey through art</h1>
       </header>
       <main>
          <article>
@@ -44,8 +44,8 @@
          <img src="images/section 5 C.png" alt="" width="550" height="800"> 
          <img src="images/section 5 D.png" alt="" width="550" height="800">
          <img src="images/section 5 A.png" alt="" width="900" height="550">
-      <p>
-         Of course, I'm not a reknowned artist or anything so no one is going to recognize my art as mine, but I finally found a lot of my drawings started to look like they could have come from the same universe. I started drawing character portraits of Dungeons and Dragons characters for my friends and I still to do so to this day when someone comes to me with a fun character idea. I also continue to draw fanart as well when I'm feeling partiuclarly inspired.
+      <p id="testP">
+        <test class="funParagraph"> Of course, I'm not a reknowned artist or anything so no one is going to recognize my art as mine, but I finally found a lot of my drawings started to look like they could have come from the same universe. I started drawing character portraits of Dungeons and Dragons characters for my friends and I still to do so to this day when someone comes to me with a fun character idea. I also continue to draw fanart as well when I'm feeling partiuclarly inspired. </test>
       </p>
          <img src="images/section 6 a.PNG" alt="" width="550" height="800"> 
          <img src="images/section 6 B.png" alt="" width="550" height="800"> 
